run_log.txt
  File "C:\facefusion\facefusion.py", line 1
    @echo off
          ^^^
SyntaxError: invalid syntax
